--- a/style/style.css
+++ b/style/style.css
@@ -1,20 +1,20 @@
 @import url("https://fonts.googleapis.com/css?family=Nunito:300");
 body {
-    background-color: #dde7ee;
+	background-color: #dde7ee;
 }
 
 #footer {
-    text-align: center;
-    font-family: "Nunito", sans-serif;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    padding-bottom: 8px;
+	text-align: center;
+	font-family: "Nunito", sans-serif;
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	padding-bottom: 8px;
 }
 
 #description {
-    font-size: smaller;
+	font-size: smaller;
 }
 
 /* #title {
@@ -22,44 +22,44 @@ body {
 } */
 
 #label {
-    font-size: smaller;
+	font-size: smaller;
 }
 
 #legend {
-    font-size: smaller;
+	font-size: smaller;
 }
 
 .cell:hover {
-    stroke-width: 1;
-    stroke: black;
+	stroke-width: 1;
+	stroke: black;
 }
 
 div.mytooltip {
-    font-family: "Nunito", sans-serif;
-    font-size: smaller;
-    position: absolute;
-    text-align: center;
-    width: auto;
-    height: auto;
-    padding: 10px;
-    background: #4a5761;
-    color: wheat;
-    border: 0px;
-    border-radius: 2px;
-    box-shadow: 0px 0px 5px 0px #000;
-    pointer-events: none;
+	font-family: "Nunito", sans-serif;
+	font-size: smaller;
+	position: absolute;
+	text-align: center;
+	width: auto;
+	height: auto;
+	padding: 10px;
+	background: #4a5761;
+	color: wheat;
+	border: 0px;
+	border-radius: 2px;
+	box-shadow: 0px 0px 5px 0px #000;
+	pointer-events: none;
 }
 
-svg {
+/* svg {
     background-color: rgb(225, 243, 243);
     font-family: "Nunito", sans-serif;
     display: block;
     margin: 5% auto;
     border-radius: 4px;
     box-shadow: 0px 0px 5px 0px #000;
-}
+} */
 
 .fa {
-    font-size: 5vh;
-    color: #021c1e;
+	font-size: 5vh;
+	color: #021c1e;
 }
